$Id$

****************************** DRUPAL 6 - 2.x BRANCH ********************************
August 3, 2009
--------------
NOISSUE by merlinofchaos: Add a "most active poster" block and a view of "My forum posts" to easily follow what a person has posted.

August 1, 2009
--------------
NOISSUE by Michelle: Fixed notices.
#413494 by Michelle, snufkin: Added support for commend edited message in the post template.
#479124 by Michelle: Merged some topic list preprocessing into advanced_forum_get_topics and cleaned up topic list when views is not enabled.

August 1, 2009
--------------
#528480 by Michelle: Added extra divs around topics / latest user on statistics for seperate styling.
#436084 by MGParisi: Reduced size of some Blue Lagoon images.
#537018 by Michelle: Indented subbody of statistics in Naked and removed indenting from Boxy/Cloudless Day
#537018 by Michelle: Added a margin to the right of the post reply button on top of topics to Naked.
                     Put padding around .forum-post-content and .forum-post-title in Naked.
                     Added boxes around .forum-top-post-footer and .forum-topic-navigation in Boxy.
                     Made post number white on Boxy and Blue Lagoon.
                     Added odd/even table shading to Boxy as well as borders around the TDs.
#537018 by Michelle: Added span around 'subforums' label so it can be styled.
                     Made .forum-table a generic class for both types of tables and added .forum-table-forums and .forum-table-topics.                     
                     Made classes in forum tables more specific.
#518110 by Michelle: Documented the chunk of code in the post .tpl there to keep the new markers from being cached.

July 31, 2009
-------------
#524592 by Dave Reid: Added email to fake user object sent to Author Pane on comments for anon users.
#534816 by Michelle: Made sure all classes / IDs were forum specific.