@@ -12,7 +12,7 @@ function advanced_forum_forum_topic_list_ctools_content_types() {
     'description' => t('The list of all topics for a forum.'),
     'required context' => new ctools_context_required(t('Forum'), 'forum'),
     'category' => t('Forum'),
-    'defaults' => array(),
+    'defaults' => array('show_sort' => TRUE),
   );
 }
 
@@ -47,7 +47,7 @@ function advanced_forum_forum_topic_list_content_type_render($subtype, $conf, $p
   $forum_per_page = variable_get('forum_per_page', 25);
   $sortby = variable_get('forum_order', 1);
 
-  $block->content = advanced_forum_get_topics($tid, $sortby, $forum_per_page);
+  $block->content = advanced_forum_get_topics($tid, $sortby, $forum_per_page, !empty($conf['show_sort']));
 
   return $block;
 }
@@ -56,6 +56,12 @@ function advanced_forum_forum_topic_list_content_type_render($subtype, $conf, $p
  * Returns an edit form for the custom type.
  */
 function advanced_forum_forum_topic_list_content_type_edit_form(&$form, &$form_state) {
+  $form['show_sort'] = array(
+    '#type' => 'checkbox',
+    '#title' => t('Show sort form'),
+    '#description' => t('If checked the sort form will appear at the top of the table. Uncheck this if you wish it to appear in a separate pane.'),
+    '#default_value' => !empty($conf['show_sort']),
+  );
 }
 
 function advanced_forum_forum_topic_list_content_type_edit_form_submit(&$form, &$form_state) {
@@ -66,6 +72,6 @@ function advanced_forum_forum_topic_list_content_type_edit_form_submit(&$form, &
 }
 
 function advanced_forum_forum_topic_list_content_type_admin_title($subtype, $conf, $context) {
-  return t('"@s" topic_list', array('@s' => $context->identifier));
+  return t('"@s" topic list', array('@s' => $context->identifier));
 }
 
