@@ -1,6 +1,10 @@
 $Id$
 
 ****************************** DRUPAL 6 - 2.x BRANCH ********************************
+August 10, 2009
+--------------
+NOISSUE by merlinofchaos: Add a sort widget for the forum topic list that utilizes the tablesort headers.
+
 August 3, 2009
 --------------
 NOISSUE by merlinofchaos: Add a "most active poster" block and a view of "My forum posts" to easily follow what a person has posted.
